manifests/short-app/05-ingress/01-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: short-app-ingress
  namespace: short-app
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: minikube.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: short-app-frontend-clusterip
            port: 
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: short-app-backend-clusterip
            port:
              number: 3000
